--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -1,1 +1,14 @@
 // app global css in Sass form
+.drawer-bg-light
+    background: $primary
+    background: -webkit-linear-gradient(to right, $primary,$secondary)
+    background: linear-gradient(to bottom, $primary,$secondary)
+
+.drawer-bg-dark
+    background: $dark
+    background: -webkit-linear-gradient(to right, $dark, $accent)
+    background: linear-gradient(to bottom, $dark, $accent)
+
+.constrain
+    max-width: 400px
+    margin: 0 auto
