--- a/src/css/quasar.variables.sass
+++ b/src/css/quasar.variables.sass
@@ -12,13 +12,13 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary   : #d6d600
-$secondary : #f5f500
-$accent    : #ffff99
+$primary: #ffe000
+$secondary: #fff292
+$accent: #727a17
 
-$dark      : #5c5c00
+$dark: #5c5c00
 
-$positive  : #21BA45
-$negative  : #C10015
-$info      : #31CCEC
-$warning   : #F2C037
+$positive: #21BA45
+$negative: #C10015
+$info: #31CCEC
+$warning: #F2C037
