Opção de cores ao usuário

--- a/src/css/quasar.variables.sass
+++ b/src/css/quasar.variables.sass
@@ -12,11 +12,11 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary: #ffe000
-$secondary: #fff292
-$accent: #727a17
+$primary: #1a2a6c
+$secondary: #b21f1f
+$accent: #fdbb2d
 
-$dark: #5c5c00
+$dark: #000
 
 $positive: #21BA45
 $negative: #C10015
