Possibilidade de voltar para as cores originais

--- a/src/css/quasar.variables.sass
+++ b/src/css/quasar.variables.sass
@@ -12,9 +12,9 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary: #1a2a6c
-$secondary: #b21f1f
-$accent: #fdbb2d
+$primary: #0c7489
+$secondary: #119da4
+$accent: #13505b
 
 $dark: #000
 
